--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
     "description": "does stuff or something",
     "manifest_version": 3,
     "author": "Adam Yuen",
-    "action":{
+    "browser_action":{
         "default_popup": "main.html",
-        "default_title": "default_title here"
+        "default_title": "titleHoverThing"
     }
 }
