--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,13 @@
     "name": "SenorYuen Chrome Extension Trial",
     "version": "1.0.0",
     "description": "does stuff or something",
-    "manifest_version": 3,
+    "manifest_version": 2,
     "author": "Adam Yuen",
     "browser_action":{
         "default_popup": "main.html",
         "default_title": "titleHoverThing"
+    },
+    "chrome_url_overrides": {
+        "newtab": "newtab.html"
     }
 }
