--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,16 @@
     "description": "A tool to help people avoid procrastinating by reminding them of the constant, inevitable passing of time.",
     "manifest_version": 2,
     "author": "Adam Yuen",
-    "permissions": ["storage"],
+    "permissions": ["storage", "notifications"],
     "browser_action":{
         "default_popup": "main.html",
-        "default_title": "Organizizer"
+        "default_title": "Antilapse"
     },
     "icons": {
         "1024": "logo.png"
+    },
+    "background": {
+        "scripts": ["bg.js"],
+        "persistent": false
     }
-
 }
