--- a/manifest.json
+++ b/manifest.json
@@ -15,5 +15,11 @@
     "background": {
         "scripts": ["bg.js"],
         "persistent": true
-    }
+    },
+    "content_scripts": [
+        {
+            "matches": ["<all_urls>"],
+            "js": ["script.js"]
+        }
+    ]
 }
